Complete basics of all XdType examples. Begin ClusterType example.

--- a/RM/3_1_0/notebooks/Getting Started.ipynb
+++ b/RM/3_1_0/notebooks/Getting Started.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook will guide you through a logical sequence for you to become familiar with S3Model and how to use the library in your applications. "
+    "This notebook will guide you through a logical sequence for you to become familiar with S3Model and how to use the library in your applications to build semantically rich, coherent data models. "
    ]
   },
   {
@@ -106,7 +106,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Structures**"
+    "9. [XdRatioType](XdRatio%20Examples.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10. [XdTemporalType](XdTemporal%20Examples.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Structures**\n",
+    "\n",
+    "There are actually two structural *Items*. The XdAdapterType and the ClusterType. The XdAdapter is used to wrap any XdType so it can be included in a Cluster. When an XdType is used as another attribute, such as a XdStringType being used as a XdCount.units, then it doesn't need the XdAdapterType wrapper. \n",
+    "\n",
+    "You have already seen that XdAdapters get created along with the XdType unless the XdType.adapter is specifically set to False."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. [ClusterType](ClusterType%20Examples.ipynb)"
    ]
   },
   {
@@ -132,84 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<style>\n",
-       "    @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,700,700italic);\n",
-       "\n",
-       "    div.cell{\n",
-       "        font-family:'roboto','helvetica','sans';\n",
-       "        color:#444;\n",
-       "        width:800px;\n",
-       "        margin-left:16% !important;\n",
-       "        margin-right:auto;\n",
-       "    }\n",
-       "\n",
-       "    div.text_cell_render{\n",
-       "        font-family: 'roboto','helvetica','sans';\n",
-       "        line-height: 145%;\n",
-       "        font-size: 120%;\n",
-       "        color:#444;\n",
-       "        width:800px;\n",
-       "        margin-left:auto;\n",
-       "        margin-right:auto;\n",
-       "    }\n",
-       "    .CodeMirror{\n",
-       "            font-family: \"Menlo\", source-code-pro,Consolas, monospace;\n",
-       "    }\n",
-       "    .prompt{\n",
-       "        display: None;\n",
-       "    }    \n",
-       "    .warning{\n",
-       "        color: rgb( 240, 20, 20 )\n",
-       "        }\n",
-       "        \n",
-       "    .logo-container {\n",
-       "        display: flex;\n",
-       "        flex-wrap: wrap;\n",
-       "        }\n",
-       "        \n",
-       "        .logo {\n",
-       "        flex: 0 0 50%;\n",
-       "        padding: 10px;\n",
-       "        vertical-align: middle;\n",
-       "        }\n",
-       "        \n",
-       "        * {\n",
-       "        margin: 0;\n",
-       "        box-sizing: border-box;\n",
-       "          }\n",
-       "</style>\n",
-       "<script>\n",
-       "    MathJax.Hub.Config({\n",
-       "                        TeX: {\n",
-       "                           extensions: [\"AMSmath.js\"]\n",
-       "                           },\n",
-       "                tex2jax: {\n",
-       "                    inlineMath: [ ['$','$'], [\"\\\\(\",\"\\\\)\"] ],\n",
-       "                    displayMath: [ ['$$','$$'], [\"\\\\[\",\"\\\\]\"] ]\n",
-       "                },\n",
-       "                displayAlign: 'center', // Change this to 'center' to center equations.\n",
-       "                \"HTML-CSS\": {\n",
-       "                    styles: {'.MathJax_Display': {\"margin\": 4}}\n",
-       "                }\n",
-       "        });\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.core.display import HTML\n",
     "def css_styling():\n",
