--- a/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -50,14 +50,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class XdBooleanType in module s3m_xdt:\n",
+      "\n",
+      "class XdBooleanType(XdAnyType)\n",
+      " |  XdBooleanType(label: str, opt: dict)\n",
+      " |  \n",
+      " |  An enumerated type which represents boolean decisions such as true/false\n",
+      " |  or yes/no answers.\n",
+      " |  \n",
+      " |  Useful where it is essential to devise the meanings (often questions in\n",
+      " |  subjective data) carefully so that the only allowed result values result\n",
+      " |  in one of the options; true or false but are presented to the user as\n",
+      " |  a list of options.\n",
+      " |  \n",
+      " |  The possible choices for True or False are values in a dictionary.\n",
+      " |  The class defines 'true_value' and 'false_value'.\n",
+      " |  The instance implementation is restricted to only have a value for one of\n",
+      " |  them based on the user choice from the options dictionary.\n",
+      " |  \n",
+      " |  The XdBooleanType should not be used as a replacement for enumerated choice\n",
+      " |  types such as male/female, or similar choice sets.\n",
+      " |  Such values should be modeled as XdStrings with enumerations and may reference\n",
+      " |  a controlled vocabulary.\n",
+      " |  In any case, the choice set often has more than two values.\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      XdBooleanType\n",
+      " |      XdAnyType\n",
+      " |      abc.ABC\n",
+      " |      builtins.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, label: str, opt: dict)\n",
+      " |      Create an instance of a XdBooleanType.\n",
+      " |      \n",
+      " |      Parameters\n",
+      " |      ----------\n",
+      " |      label: str\n",
+      " |          A human readable name lending semantics to the purpose of the model.\n",
+      " |      opt: dictionary\n",
+      " |          A dictionary where the two allowed keys are 'trues' and 'falses'.\n",
+      " |          The items associated with these keys are a list of options for the user to\n",
+      " |          choose from.\n",
+      " |  \n",
+      " |  asJSONex(self)\n",
+      " |      Return an example JSON fragment for this model based on the asXMLex method.\n",
+      " |  \n",
+      " |  asXML(self)\n",
+      " |      Return an example XML fragment for this model.\n",
+      " |  \n",
+      " |  asXMLex(self)\n",
+      " |      Return an example XML fragment for this model.\n",
+      " |      \n",
+      " |      The core elements are included even though they may not be\n",
+      " |      required via cardinality. Therefore this example may be considerably\n",
+      " |      larger than an actual implementation.\n",
+      " |  \n",
+      " |  asXSD(self)\n",
+      " |      Return a XML Schema complexType definition.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  false_value\n",
+      " |      A string that represents a boolean False in the implementation.\n",
+      " |      These are constrained by a set of enumerations.\n",
+      " |  \n",
+      " |  true_value\n",
+      " |      A string that represents a boolean True in the implementation.\n",
+      " |      These are constrained by a set of enumerations.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __abstractmethods__ = frozenset()\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from XdAnyType:\n",
+      " |  \n",
+      " |  __str__(self)\n",
+      " |      Return str(self).\n",
+      " |  \n",
+      " |  asJSON(self)\n",
+      " |      Return an example JSON fragment for this model.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from XdAnyType:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      " |  \n",
+      " |  act\n",
+      " |      Access Control Tag. If this is used it must contain a valid term from\n",
+      " |      the Access Control System linked to by the containing Data Model\n",
+      " |      'acs' attribute.\n",
+      " |  \n",
+      " |  acuid\n",
+      " |      The unique identifier of the wrapping XdAdapter of the component.\n",
+      " |  \n",
+      " |  adapter\n",
+      " |  \n",
+      " |  cardinality\n",
+      " |      The cardinality status values.\n",
+      " |      \n",
+      " |      The setter method can be called by each subclass to add cardinality\n",
+      " |      values for each element or change the defaults.\n",
+      " |      Some elements cardinality may not be changed.\n",
+      " |      Ex: XdBoolean elements are not modifiable.\n",
+      " |      \n",
+      " |      The cardinality dictionary uses a string representation of each\n",
+      " |      property name and a tuple as the value.\n",
+      " |      \n",
+      " |      The value passed into the setter is a tuple with v[0] as a string (key) and\n",
+      " |      v[1] as a tuple containing an integer set representing the\n",
+      " |      (minimum, maximum) values. The entire tuple is replaced in the dictionary.\n",
+      " |      \n",
+      " |      Examples\n",
+      " |      --------\n",
+      " |      \n",
+      " |      ('vtb', (1,1)) will set the vtb value to be required.\n",
+      " |      \n",
+      " |      \n",
+      " |      NOTES\n",
+      " |      -----\n",
+      " |      \n",
+      " |      The cardinality for latitude and longitude are combined into one\n",
+      " |      setting called 'location'.\n",
+      " |      \n",
+      " |      The Python value of 'None' represents the 'unbounded' XML Schema value.\n",
+      " |      The 'unbounded' value is allowed on only a few attributes.\n",
+      " |  \n",
+      " |  definition_url\n",
+      " |      The primary definition URL for the model.\n",
+      " |      Cannot be an IP address.\n",
+      " |  \n",
+      " |  docs\n",
+      " |      The human readable documentation string describing the purpose of\n",
+      " |      the model.\n",
+      " |  \n",
+      " |  ev\n",
+      " |      In an invalid instance, the application can indicate here why data is\n",
+      " |      missing or invalid.\n",
+      " |      The sub-types are based on ISO 21090 NULL Flavors entries, with\n",
+      " |      additions noted from real-world usage.\n",
+      " |  \n",
+      " |  label\n",
+      " |      The semantic name of the component.\n",
+      " |  \n",
+      " |  latitude\n",
+      " |      Latitude in decimal format. Value range -90.000000 to 90.000000.\n",
+      " |  \n",
+      " |  longitude\n",
+      " |      Longitude in decimal format. Value range -180.000000 to 180.000000.\n",
+      " |  \n",
+      " |  mcuid\n",
+      " |      The unique identifier of the component.\n",
+      " |  \n",
+      " |  modified\n",
+      " |      Time Modified. If present this must be a valid date-time stamp.\n",
+      " |      It is used to indicate the date and time the data was last changed.\n",
+      " |  \n",
+      " |  pred_obj_list\n",
+      " |      A list of additional predicate object pairs to describe the component.\n",
+      " |      \n",
+      " |      Each list item is a tuple where 0 is the predicate and 1 is the object.\n",
+      " |      \n",
+      " |      Example:\n",
+      " |      ('rdf:resource','https://www.niddk.nih.gov/health-information/health-statistics')\n",
+      " |      The setter accepts the tuple and appends it to the list.\n",
+      " |      If an empty list is supplied it resets the value to the empty list.\n",
+      " |  \n",
+      " |  tr\n",
+      " |      Time Recorded. If present this must be a valid date-time.\n",
+      " |      It is used to indicate the initial date and time the data was recorded.\n",
+      " |  \n",
+      " |  vtb\n",
+      " |      Valid Time Begin. If present this must be a valid datetime including timezone.\n",
+      " |      It is used to indicate the beginning time that information is considered valid.\n",
+      " |  \n",
+      " |  vte\n",
+      " |      Valid Time End. If present this must be a valid date-time including timezone.\n",
+      " |      It is used to indicate the ending time that information is considered valid\n",
+      " |      or the time the information expired or will expire.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(XdBooleanType)"
    ]
@@ -77,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -102,14 +296,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XdBooleanType : Can it happen here?, ID: cjn4l9j3c0000cl8px587ssce\n"
+     ]
+    }
+   ],
    "source": [
     "print(d)"
    ]
@@ -128,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -141,14 +343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Provide a True/False result based on user selected option from pulldown or radio button style UI. \n",
+      "What is their reaction to the book?\n"
+     ]
+    }
+   ],
    "source": [
     "print(d.docs)"
    ]
@@ -182,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -195,13 +406,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Provide a True/False result based on user selected option from pulldown or radio button style UI. \n",
+      "What is their reaction to the book?\n",
+      "\n",
+      "Definition: https%3A//www.harpercollins.com/9780062696199/can-it-happen-here/\n"
+     ]
+    }
+   ],
    "source": [
     "print(d.docs)"
    ]
@@ -238,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -267,14 +489,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  \n",
+      "<xs:element name=\"ms-cjn4l9j3c0001cl8pw61yhea0\" substitutionGroup=\"s3m:Items\" type=\"s3m:mc-cjn4l9j3c0001cl8pw61yhea0\"/>\n",
+      "  <xs:complexType name=\"mc-cjn4l9j3c0001cl8pw61yhea0\">\n",
+      "    <xs:complexContent>\n",
+      "      <xs:restriction base=\"s3m:XdAdapterType\">\n",
+      "        <xs:sequence>\n",
+      "          <xs:element maxOccurs=\"unbounded\" minOccurs=\"0\" ref=\"s3m:ms-cjn4l9j3c0000cl8px587ssce\"/>\n",
+      "        </xs:sequence>\n",
+      "      </xs:restriction>\n",
+      "    </xs:complexContent>\n",
+      "  </xs:complexType>\n",
+      "  <xs:element name=\"ms-cjn4l9j3c0000cl8px587ssce\" substitutionGroup=\"s3m:XdAdapter-value\" type=\"s3m:mc-cjn4l9j3c0000cl8px587ssce\"/>\n",
+      "  <xs:complexType name=\"mc-cjn4l9j3c0000cl8px587ssce\">\n",
+      "    <xs:annotation>\n",
+      "      <xs:documentation>\n",
+      "        Provide a True/False result based on user selected option from pulldown or radio button style UI. \n",
+      "What is their reaction to the book?\n",
+      "\n",
+      "Definition: https%3A//www.harpercollins.com/9780062696199/can-it-happen-here/\n",
+      "      </xs:documentation>\n",
+      "      <xs:appinfo>\n",
+      "        <rdfs:Class rdf:about=\"mc-cjn4l9j3c0000cl8px587ssce\">\n",
+      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#XdBooleanType\"/>\n",
+      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model/RMC\"/>\n",
+      "          <rdfs:isDefinedBy rdf:resource=\"https%3A//www.harpercollins.com/9780062696199/can-it-happen-here/\"/>\n",
+      "          <sioc:topic rdf:resource=\"https%3A//en.wikipedia.org/wiki/Political_science\"/>\n",
+      "          <dc:creator rdf:resource=\"https%3A//www.harpercollins.com/author/123554/cass-r-sunstein/\"/>\n",
+      "        </rdfs:Class>\n",
+      "      </xs:appinfo>\n",
+      "    </xs:annotation>\n",
+      "    <xs:complexContent>\n",
+      "      <xs:restriction base=\"s3m:XdBooleanType\">\n",
+      "        <xs:sequence>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"1\" name=\"label\" type=\"xs:string\" fixed=\"Can it happen here?\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"act\" type=\"xs:string\" default=\"\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" ref=\"s3m:ExceptionalValue\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"vtb\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"vte\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"tr\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"modified\" type=\"xs:dateTime\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"latitude\" type=\"xs:decimal\"/>\n",
+      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"longitude\" type=\"xs:decimal\"/>\n",
+      "          <xs:choice maxOccurs='1' minOccurs='1'>\n",
+      "          <xs:element name='true-value'>\n",
+      "            <xs:simpleType>\n",
+      "              <xs:restriction base='xs:string'>\n",
+      "                  <xs:enumeration value='Yes'/>\n",
+      "                  <xs:enumeration value='Maybe'/>\n",
+      "                  <xs:enumeration value='Possible'/>\n",
+      "              </xs:restriction>\n",
+      "            </xs:simpleType>\n",
+      "          </xs:element>\n",
+      "          <xs:element name='false-value'>\n",
+      "            <xs:simpleType>\n",
+      "              <xs:restriction base='xs:string'>\n",
+      "                  <xs:enumeration value='No'/>\n",
+      "                  <xs:enumeration value='Unlikely'/>\n",
+      "                  <xs:enumeration value='Impossible'/>\n",
+      "              </xs:restriction>\n",
+      "            </xs:simpleType>\n",
+      "          </xs:element>\n",
+      "          </xs:choice>\n",
+      "        </xs:sequence>\n",
+      "      </xs:restriction>\n",
+      "    </xs:complexContent>\n",
+      "  </xs:complexType>\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(d.asXSD())"
    ]
@@ -292,14 +588,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  <ms-cjn4l9j3c0000cl8px587ssce>\n",
+      "    <label>Can it happen here?</label>\n",
+      "    <act>Private</act>\n",
+      "    <OTH>\n",
+      "      <ev-name>Other</ev-name>  # example exceptional value\n",
+      "    </OTH>\n",
+      "    <vtb>2006-06-04T18:13:51.0</vtb>\n",
+      "    <vte>2026-05-04T18:13:51.0</vte>\n",
+      "    <tr>2006-05-04T18:13:51.0</tr>\n",
+      "    <modified>2006-05-04T18:13:51.0</modified>\n",
+      "    <latitude>-22.456</latitude>\n",
+      "    <longitude>123.654</longitude>\n",
+      "    <false-value>Impossible</false-value>\n",
+      "  </ms-cjn4l9j3c0000cl8px587ssce>\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(d.asXMLex())"
    ]
@@ -317,14 +635,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"ms-cjn4l9j3c0000cl8px587ssce\": {\n",
+      "    \"label\": \"Can it happen here?\",\n",
+      "    \"act\": \"Super Secret\",\n",
+      "    \"OTH\": {\n",
+      "      \"ev-name\": \"Other\",\n",
+      "      \"#text\": \"# example exceptional value\"\n",
+      "    },\n",
+      "    \"vtb\": \"2006-06-04T18:13:51.0\",\n",
+      "    \"vte\": \"2026-05-04T18:13:51.0\",\n",
+      "    \"tr\": \"2006-05-04T18:13:51.0\",\n",
+      "    \"modified\": \"2006-05-04T18:13:51.0\",\n",
+      "    \"latitude\": \"-22.456\",\n",
+      "    \"longitude\": \"123.654\",\n",
+      "    \"true-value\": \"Yes\"\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "print(d.asJSONex())"
    ]
@@ -367,22 +709,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  <ms-cjn4l9j3c0000cl8px587ssce>\n",
+      "    <label>Can it happen here?</label>\n",
+      "    <false-value>Impossible</false-value>\n",
+      "  </ms-cjn4l9j3c0000cl8px587ssce>\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(d.asXML())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"ms-cjn4l9j3c0000cl8px587ssce\": {\n",
+      "    \"label\": \"Can it happen here?\",\n",
+      "    \"true-value\": \"Yes\"\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "print(d.asJSON())"
    ]
