--- a/RM/3_1_0/notebooks/XdCount Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdCount Examples.ipynb
@@ -96,7 +96,7 @@
     "# now the count model\n",
     "d = XdCountType(\"Widgets Count\")\n",
     "d.docs = \"Record the number of widgets in inventory.\"\n",
-    "d.xdcount_units = u\n",
+    "d.units = u\n",
     "print(d)"
    ]
   },
@@ -157,7 +157,7 @@
     "# now the count model\n",
     "d = XdCountType(\"Example Count\")\n",
     "d.docs = \"A count type with an inclusive min/max value set.\"\n",
-    "d.xdcount_units = u\n",
+    "d.units = u\n",
     "d.min_inclusive = 0 # cannot have a negative value\n",
     "d.max_inclusive = 100 # cannot have a value over 100\n",
     "\n",
