--- a/RM/3_1_0/notebooks/XdRatio Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdRatio Examples.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Examples using the XdQuantityType"
+    "# Examples using the XdRatioType"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "source": [
     "import sys \n",
     "sys.path.append(\"../pylib/\")\n",
-    "from s3m_xdt import XdQuantityType, XdStringType"
+    "from s3m_xdt import XdRatioType, XdStringType"
    ]
   },
   {
@@ -45,7 +45,7 @@
     }
    },
    "source": [
-    "Review the documentation of XdQuantityType. Note the class signature requires a *label* (string name) \n"
+    "Review the documentation of XdRatioType. Note the class signature requires a *label* (string name) \n"
    ]
   },
   {
@@ -59,7 +59,7 @@
    },
    "outputs": [],
    "source": [
-    "help(XdQuantityType)"
+    "help(XdRatioType)"
    ]
   },
   {
@@ -70,9 +70,8 @@
     }
    },
    "source": [
-    "Create a XdQuantity instance. We must provide a *label* as per all Xd Types. We also need a units object which is a XdStringType. Usually the modeler will provide a selection of options for the end-user to choose from when selecting a units value. \n",
-    "\n",
-    "For this example we will create a model to record an amount of currency. In a real-world application the complete list of codes would usually be used. https://www.currency-iso.org/en/home/tables/table-a1.html In our example we show a few."
+    "Create a XdRatio instance and provide a *label* as per all Xd Types. A units object, which is a XdStringType, is optional for the ratio value, the numerator and denominator. This Xd accommodates *ratios, proportions and rates*.\n",
+    "\n"
    ]
   },
   {
@@ -81,50 +80,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create the units model\n",
-    "u = XdStringType('Currency Codes')\n",
-    "u.docs = \"Select the currency code.\"\n",
-    "u.definition_url = 'https://www.iso.org/iso-4217-currency-codes.html'\n",
-    "# create the units options\n",
-    "enums = []\n",
-    "enums.append(('USD', 'https://www.iso.org/iso-4217-currency-codes.html#USD'))\n",
-    "enums.append(('BRL', 'https://www.iso.org/iso-4217-currency-codes.html#BRL'))\n",
-    "enums.append(('CAD', 'https://www.iso.org/iso-4217-currency-codes.html#CAD'))\n",
-    "u.enums = enums\n",
-    "\n",
-    "# Do not create an adapter\n",
-    "u.adapter = False\n",
-    "\n",
-    "# now the model\n",
-    "d = XdQuantityType(\"Currency Amount\")\n",
-    "d.docs = \"Record the amount of currency.\"\n",
-    "d.units = u\n",
-    "d.min_inclusive = 0  # can't have a negative amount\n",
-    "d.fraction_digits = 2 # currency is recorded with only two decimal places\n",
+    "# A ratio model\n",
+    "d = XdRatioType(\"A Ratio\")\n",
+    "d.docs = \"Model a ratio with units on numerator and denominator.\"\n",
+    "d.ratio_type = 'ratio'\n",
     "print(d)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "print(d.asXSD())"
+    "# A rate model\n",
+    "d = XdRatioType(\"A Rate\")\n",
+    "d.docs = \"Model a rate.\"\n",
+    "d.ratio_type = 'rate'\n",
+    "print(d)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "print(d.asXML())"
+    "# A proportion model\n",
+    "d = XdRatioType(\"A Proportion\")\n",
+    "d.docs = \"Model a proportion.\"\n",
+    "d.ratio_type = 'proportion'\n",
+    "print(d)"
    ]
   }
  ],
