--- a/RM/3_1_0/notebooks/XdTemporal Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdTemporal Examples.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Examples using the XdFloatType"
+    "# Examples using the XdTemporalType"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "source": [
     "import sys \n",
     "sys.path.append(\"../pylib/\")\n",
-    "from s3m_xdt import XdFloatType, XdStringType"
+    "from s3m_xdt import XdTemporalType"
    ]
   },
   {
@@ -45,7 +45,7 @@
     }
    },
    "source": [
-    "Review the documentation of XdFloatType. Note the class signature requires a *label* (string name) \n"
+    "Review the documentation of XdRatioType. Note the class signature requires a *label* (string name) \n"
    ]
   },
   {
@@ -59,7 +59,7 @@
    },
    "outputs": [],
    "source": [
-    "help(XdFloatType)"
+    "help(XdTemporalType)"
    ]
   },
   {
@@ -70,7 +70,7 @@
     }
    },
    "source": [
-    "Create a XdFloat instance. We must provide a *label* as per all Xd Types. A units object, which is a XdStringType, is optional. \n"
+    "Create a XdTemporal instance and provide a *label* as per all Xd Types. Require a full ISO date and disallow all other temporals. "
    ]
   },
   {
@@ -79,35 +79,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# now the Float model\n",
-    "d = XdFloatType(\"Sensor 01\")\n",
-    "d.docs = \"Record floating point numbers from an IoT sensor.\"\n",
-    "d.min_inclusive = 100\n",
-    "d.max_inclusive = 1000\n",
-    "print(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
+    "d = XdTemporalType(\"A Date Only\")\n",
+    "d.docs = \"Require a full date. Disallow all others.\"\n",
+    "d.cardinality = ('date', (1,1))\n",
+    "d.cardinality = ('time', (0,0))\n",
+    "d.cardinality = ('datetime', (0,0))\n",
+    "d.cardinality = ('day', (0,0))\n",
+    "d.cardinality = ('month', (0,0))\n",
+    "d.cardinality = ('year', (0,0))\n",
+    "d.cardinality = ('year_month', (0,0))\n",
+    "d.cardinality = ('month_day', (0,0))\n",
+    "d.cardinality = ('duration', (0,0))\n",
+    "print(d)\n",
     "print(d.asXSD())"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Create a XdTemporal instance and provide a *label* as per all Xd Types. Allow a full ISO date or year_month and disallow all other temporals. Note that it is non-sensical to **require** an attribute and then allow others. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "d.xdfloat_value = 2.45E2\n",
-    "print(d.asXML())"
+    "d = XdTemporalType(\"Date or Month/Year\")\n",
+    "d.docs = \"Allow Date or Month/Year. Disallow all others.\"\n",
+    "d.cardinality = ('date', (0,1))\n",
+    "d.cardinality = ('time', (0,0))\n",
+    "d.cardinality = ('datetime', (0,0))\n",
+    "d.cardinality = ('day', (0,0))\n",
+    "d.cardinality = ('month', (0,0))\n",
+    "d.cardinality = ('year', (0,0))\n",
+    "d.cardinality = ('year_month', (0,1))\n",
+    "d.cardinality = ('month_day', (0,0))\n",
+    "d.cardinality = ('duration', (0,0))\n",
+    "print(d)\n",
+    "print(d.asXSD())"
    ]
   }
  ],
